--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "outDir": ".",
+    "allowJs": true,
     "strict": true,
-    "esModuleInterop": true,
-    "outDir": "dist"
+    "baseUrl": ".",
+    "paths": {
+      "obsidian": ["./obsidian.d.ts"]
+    }
   },
   "include": ["main.ts"]
 }
