--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,11 @@
   "id": "obsidian-telegram-reminder",
   "name": "Telegram Reminder Bot",
   "version": "1.1.0",
-  "minAppVersion": "0.15.0",
+  "minAppVersion": "0.12.0",
   "description": "Запускает Telegram напоминания на основе задач Obsidian",
   "author": "Artem",
   "authorUrl": "https://github.com/ArtemSunRise",
-  "isDesktopOnly": true
+  "isDesktopOnly": true,
   "main": "main.js"
 
 }
